--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/integracje?useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
+
+spring.jpa.show-sql = true
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.use-new-id-generator-mappings= false
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
